@@ -1,5 +1,7 @@
 2002-01-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* Util.py (gethostname): Remove Python 1.x support.
+
 	* Defaults.py (CRYPT_KEY): Use binascii.unhexlify instead of 
 	Util.unhexlify.
 	
